--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <body>
     <div class="header">
       <h1>Discover hidden places in the world around you</h1>
-      <p><a>Download Excursion (Coming soon!)</a></p>
-    </div>
+      <p><a href="https://2b8h48d2hndiclqpbm1c904jb759o0n3ep56sm5k07sp4m4vicl0.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
+<!-- add video -->
+    <div class="belly">
+    <h2>Your personal travel guide</h2>
+    <p> Excursion remembers places you like, and recommends new points of interest around you</p>
+
+  </div>
   </body>
 
 </html>
