--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
   </head>
 
   <body>
+
     <div class="header">
       <h1>Discover hidden places in the world around you</h1>
       <p><a href="https://2b8h48d2hndiclqpbm1c904jb759o0n3ep56sm5k07sp4m4vicl0.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
-<!-- add video -->
-    <div class="belly">
-    <h2>Your personal travel guide</h2>
-    <p> Excursion remembers places you like, and recommends new points of interest around you</p>
+      <video autoplay loop src="/Users/andachisster/Documents/New/excursion/resources/excursion.mp4"></video>
+    </div>
 
-  </div>
+    <div class="belly">
+      <h2>Your personal travel guide</h2>
+      <p> Excursion remembers places you like, and recommends new points of interest around you</p>
+      <img src="/Users/andachisster/Documents/New/excursion/resources/camp.jpg" />
+    </div>
+
+    <div class ="tail">
+      <img href="/Users/andachisster/Documents/New/excursion/resources/phone.png" />
+      <h2>Coming soon for iPhone and Android</h2>
+      <p><a href="https://2b8h48d2hndiclqpbm1c904jb759o0n3ep56sm5k07sp4m4vicl0.codecademy.cloud/">Download Excursion (Coming soon!)</a></p>
+      <p id="tag"> &copy; Excursion </p>
+    </div>
+
   </body>
 
 </html>
